applications/base-application/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: base-application
spec:
  replicas: 1
  selector:
    matchLabels:
      app: base-application
  template:
    metadata:
      labels:
        app: base-application
    spec:
      containers:
      - name: base-application
        image: matcham89/app:latest
        ports:
        - containerPort: 5000
