applications/base-application/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: base-application
spec:
  selector:
    app: base-application
  ports:
  - name: https
    protocol: TCP
    port: 443
    targetPort: 5000
  - name: http
    protocol: TCP
    port: 80
    targetPort: 5000
