applications/base-application/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: base-application-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: baseapp.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: base-application
            port:
              number: 80
